--- a/app/src/main/res/layouts/navbar/layout/chat_screen.xml
+++ b/app/src/main/res/layouts/navbar/layout/chat_screen.xml
@@ -1,19 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_color"
+    android:background="@color/white_color"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".navbar.Chat">
-    
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Chat "
-        android:textColor="@color/white_color"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        android:layout_gravity="center"/>
 
-</FrameLayout>
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar_chat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/toolbar_bottom_border"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:subtitleTextAppearance="@font/golos_text_semi_bold"
+        app:titleCentered="true"
+        app:title="Chat"
+        app:titleTextColor="@color/font_primary_color"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <com.google.android.material.textfield.TextInputLayout
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_chat"
+        android:layout_marginTop="65dp"
+        android:padding="20dp"
+        app:boxBackgroundMode="none"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:hintEnabled="false"
+        android:hint="@string/app_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="20dp"
+            android:drawableEnd="@drawable/icon_search"
+            android:textColor="@color/primary_color"
+            android:gravity="center|start"
+            android:background="@drawable/rounded_border"
+            android:textColorHint="@color/primary_color"
+
+            android:hint="hint" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
+
+    </com.google.android.material.card.MaterialCardView>
+
+
+    
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
