--- a/app/src/main/res/layouts/navbar/layout/head_fragment.xml
+++ b/app/src/main/res/layouts/navbar/layout/head_fragment.xml
@@ -19,16 +19,36 @@
 
     </FrameLayout>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:itemIconTint="@color/primary_color"
-        app:itemBackground="@color/white_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/navigation">
+<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+<!--        android:id="@+id/navigation"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:itemIconTint="@color/primary_color"-->
+<!--        app:itemBackground="@color/white_color"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:menu="@menu/navigation">-->
+<!--    </com.google.android.material.bottomnavigation.BottomNavigationView>-->
 
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
+    <nl.joery.animatedbottombar.AnimatedBottomBar
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:abb_tabs="@menu/navigation"
+        app:abb_selectedTabType="text"
+        app:abb_tabAnimation="slide"
+        app:abb_tabAnimationSelected="slide"
+        app:abb_indicatorColor="@color/primary_color"
+        app:abb_indicatorAnimation="slide"
+        app:abb_indicatorMargin="16dp"
+        app:abb_tabColor="@color/font_primary_color"
+        app:abb_tabColorSelected="@color/primary_color"
+        android:background="@color/white_color"
+        app:abb_indicatorHeight="4dp"
+        app:abb_indicatorAppearance="round"
+        app:abb_selectedIndex="0"
+
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
